# TruePanel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  collector.py  collector.v0.5-before-rich-data.py  collector.v0.6-zfs-activity-working.py  compose.yaml  detect.sh  install-docker.sh  install.sh  lcd-menu.py  lcd-menu.v0.2-before-menu-fix.py  lcd-menu.v0.3-storage-working.py  lcd-menu.v0.4-drive-temps-working.py  lcd-menu.v0.4-fixed-before-collector.py  lcd-menu.v0.4-working-before-collector-integration.py  mission_control.py  mission_control_web.py  mission_lcd_test.py  pyproject.toml  requirements.txt  test-new-menu.py  truepanel.py  truepanel.yaml  truepanel_fans.py  uninstall.sh
development/: a00_confirmation_probe.py  a00_landmark_probe.py  a125_command_response_probe.py  a125_full_rom_cataloger.py  button_monitor.py  cgram_alias_inspector.py  cgram_slot0_probe.py  custom_slot_baseline.py  custom_slot_inspector.py  dashboard_preview.py  display_selector_probe.py  glyph_foundry_preview.py  glyph_level_probe.py  graphics_demo.py  lcd_glyph_probe.py  native_dither_preview.py  protocol_simulation_demo.py  rom_bar_candidate_viewer.py  rom_code_pair_probe.py  rom_fill_comparison.py  rom_level_calibrator.py  rom_progress_preview.py  sgpio_led_probe.py
docs/: A125_PROTOCOL.md  ARCHITECTURE.md  CLI.md  DEVELOPMENT.md  HARDWARE.md  HISTORICAL_TELEMETRY.md  HISTORY.md  INSTALLATION.md  PHILOSOPHY.md  PLUGIN_API.md  README.md  RELEASE.md  ROADMAP.md  STARGATE.md  STARGATE_DISCOVERIES.md  UPGRADING.md
plugins/: .truepanel-plugin-state.json
qnaplcd/: __init__.py
serial/: rfc2217.py  serialposix.py  serialutil.py
tests/: test_a125_protocol.py  test_a125_protocol_errors.py  test_a125_transaction_ownership.py  test_a125_transaction_trace.py  test_alert_display_rotation.py  test_alert_manager_audible.py  test_button_service.py  test_config_persistence.py  test_config_policy.py  test_enclosure.py  (+104 more)
(+232 files in other folders)
